UIMA-1560 Added null check in setCollectionReader() before dereferencing collectionReader var
git-svn-id: https://svn.apache.org/repos/asf/incubator/uima/uimaj/trunk@812554 13f79535-47bb-0310-9956-ffa450edef68